--- a/sass/jquery.steps.scss
+++ b/sass/jquery.steps.scss
@@ -531,6 +531,7 @@ table {
     border-color: #58B58B;
     position: relative;
     background-color: #fff;
+    cursor: initial;
 
     .number {
         display: none;
@@ -943,6 +944,7 @@ fieldset {
             display: -webkit-flex;
             display: -ms-flex;
             display: flex;
+            margin-top: 10px;
 
             img {
                 width: 1.6875rem;
@@ -1129,6 +1131,7 @@ fieldset {
         text-align: center;
         color: #FFFFFF;
         padding: 0.1875rem 1.4375rem;
+        box-sizing: content-box;
     }
 
     .hr {
@@ -1198,6 +1201,14 @@ fieldset {
             display: inline-block;
             width: 100%;
             margin: 0 !important;
+
+            &.error {
+                border-color: #dc3545 !important;
+            }
+        }
+
+        label.error {
+            display: none !important;
         }
 
         ::-webkit-input-placeholder {
@@ -1252,5 +1263,212 @@ fieldset {
         border-radius: 3px;
         cursor: pointer;
         display: inline-block;
+    }
+}
+// custom custom-checkbox
+
+.steps_wrapp {
+    .custom-control {
+        position: relative;
+        display: block;
+        min-height: 1.5rem;
+        padding-left: 28px;
+        margin-bottom: 2px;
+    }
+
+    .custom-control-input {
+        position: absolute;
+        z-index: -1;
+        opacity: 0;
+    }
+
+    .custom-control-label {
+        position: relative;
+        margin-bottom: 0;
+        vertical-align: top;
+        font-family: Open Sans;
+        font-style: normal;
+        font-weight: 600;
+        font-size: 12px;
+        line-height: 100%;
+        color: #828282;
+        display: block;
+        padding: 8px 10px;
+    }
+
+    .custom-checkbox .custom-control-label:before {
+        background: #FFFFFF;
+        border: 1px solid #D6D6D6;
+        box-sizing: border-box;
+        border-radius: 5px;
+    }
+
+    .custom-control-label:after,
+    .custom-control-label:before {
+        position: absolute;
+        top: 2px;
+        left: -28px;
+        display: block;
+        width: 25px;
+        height: 25px;
+        content: "";
+    }
+
+    .custom-control-label:before,
+    .custom-file-label,
+    .custom-select {
+        -webkit-transition: background-color 0.15s ease-in-out,border-color 0.15s ease-in-out,-webkit-box-shadow 0.15s ease-in-out;
+        transition: background-color 0.15s ease-in-out,border-color 0.15s ease-in-out,-webkit-box-shadow 0.15s ease-in-out;
+        transition: background-color 0.15s ease-in-out,border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out;
+        transition: background-color 0.15s ease-in-out,border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out,-webkit-box-shadow 0.15s ease-in-out;
+    }
+
+    .custom-checkbox .custom-control-input:checked~.custom-control-label:after {
+        border-left: solid 2.5px #58B58B;
+        border-bottom: solid 2.5px #58B58B;
+        width: 17px;
+        height: 8px;
+        transform: rotate(-45deg);
+        box-sizing: border-box;
+        top: 9px;
+        left: -24px;
+    }
+
+    .custom-checkbox .custom-control-input.error~.custom-control-label:before {
+        border-color: #dc3545;
+    }
+
+    .custom-checkbox .custom-control-input.error~.error,
+    .registration_bts_wrapp label.error {
+        display: none !important;
+    }
+}
+// .card.choose_tags
+
+.card.choose_tags {
+    p.title {
+        font-family: Montserrat;
+        font-style: normal;
+        font-weight: 600;
+        font-size: 13px;
+        line-height: 25px;
+        color: #828282;
+        margin-bottom: 10px;
+        display: block;
+    }
+
+    .selected_tags {
+        ul {
+            display: -webkit-flex;
+            display: -ms-flex;
+            display: flex;
+            flex-wrap: wrap;
+
+            li.empty {
+                display: block;
+                width: 84px;
+                height: 30px;
+                background: #FFFFFF;
+                border: 1px dashed #D6D6D6;
+                box-sizing: border-box;
+                border-radius: 3px;
+                margin-right: 20px;
+                margin-bottom: 17px;
+            }
+        }
+    }
+
+    .select_topic {
+        p.title {
+            margin-top: 16px;
+        }
+
+        .select_wrapp {
+            position: relative;
+
+            &:after {
+                content: '';
+                position: absolute;
+                right: 20px;
+                bottom: 17px;
+                display: block;
+                width: 6px;
+                height: 10px;
+                background-image: url("../img/arrow_right.svg");
+                background-size: contain;
+                background-position: center;
+                background-color: #fff;
+                transform: rotate(90deg);
+            }
+
+            &:before {
+                content: '';
+                position: absolute;
+                right: 2px;
+                bottom: 5px;
+                display: block;
+                width: 12px;
+                height: 40px;
+                background-color: #fff;
+                z-index: 1;
+            }
+        }
+
+        select {
+            font-family: Montserrat;
+            font-style: normal;
+            font-weight: 600;
+            font-size: 20px;
+            line-height: 24px;
+            color: #4F4F4F;
+            background: #FFFFFF;
+            border: 1px solid #D6D6D6;
+            box-sizing: border-box;
+            border-radius: 3px;
+            padding: 10px 15px;
+            display: block;
+            width: 100%;
+            padding-right: 20px;
+        }
+    }
+
+    .select_tags {
+        p.title {
+            margin-top: 18px;
+            margin-bottom: 15px;
+        }
+
+        ul {
+            display: -webkit-flex;
+            display: -ms-flex;
+            display: flex;
+            flex-wrap: wrap;
+
+            li {
+                display: block;
+                background: #FFFFFF;
+                border: 1px solid #D6D6D6;
+                box-sizing: border-box;
+                border-radius: 3px;
+                margin-right: 16px;
+                margin-bottom: 17px;
+                font-family: Montserrat;
+                font-style: normal;
+                font-weight: 500;
+                font-size: 13px;
+                line-height: 130%;
+                text-align: center;
+                color: #828282;
+                padding: 6px 18px 7px;
+            }
+        }
+
+        .hr {
+            border-top: 0.0625rem solid #D6D6D6;
+            display: block;
+            height: 0.0625rem;
+            margin: 27px 0;
+        }
+
     }
 }
