--- a/sass/jquery.steps.scss
+++ b/sass/jquery.steps.scss
@@ -720,44 +720,12 @@ table {
     display: list-item;
 }
 
-#steps_form input[type="text"],
-#steps_form input[type="email"],
-#steps_form input[type="tel"],
-#steps_form input[type="url"],
-#steps_form textarea,
-#steps_form button[type="submit"] {
-    font: 400 0.75rem/1rem "Titillium Web", Helvetica, Arial, sans-serif;
-}
-
 fieldset {
     border: medium none !important;
     margin: 0 0 0.625rem;
     min-width: 100%;
     padding: 0;
     width: 100%;
-}
-
-#steps_form input[type="text"],
-#steps_form input[type="email"],
-#steps_form input[type="tel"],
-#steps_form input[type="url"],
-#steps_form textarea {
-    width: 100%;
-    border: 0.0625rem solid #ccc;
-    background: #FFF;
-    margin: 0 0 0.3125rem;
-    padding: 0.625rem;
-}
-
-#steps_form input[type="text"]:hover,
-#steps_form input[type="email"]:hover,
-#steps_form input[type="tel"]:hover,
-#steps_form input[type="url"]:hover,
-#steps_form textarea:hover {
-    -webkit-transition: border-color 0.3s ease-in-out;
-    -moz-transition: border-color 0.3s ease-in-out;
-    transition: border-color 0.3s ease-in-out;
-    border: 0.0625rem solid #aaa;
 }
 
 #steps_form textarea {
@@ -846,7 +814,6 @@ fieldset {
         .container {
             max-width: 68.75rem;
             display: flex;
-            width: 100%;
             justify-content: space-between;
             align-items: center;
             padding: 3rem 0.9375rem;
@@ -1252,15 +1219,15 @@ fieldset {
         font-family: Montserrat;
         font-style: normal;
         font-weight: 600;
-        font-size: 12px;
-        line-height: 15px;
+        font-size: 0.75rem;
+        line-height: 0.9375rem;
         text-align: center;
         color: #828282;
-        padding: 7px 15px;
+        padding: 0.4375rem 0.9375rem;
         background: #FFFFFF;
-        border: 1px solid #E0E0E0;
+        border: 0.0625rem solid #E0E0E0;
         box-sizing: border-box;
-        border-radius: 3px;
+        border-radius: 0.1875rem;
         cursor: pointer;
         display: inline-block;
     }
@@ -1272,8 +1239,8 @@ fieldset {
         position: relative;
         display: block;
         min-height: 1.5rem;
-        padding-left: 28px;
-        margin-bottom: 2px;
+        padding-left: 1.75rem;
+        margin-bottom: 0.125rem;
     }
 
     .custom-control-input {
@@ -1289,28 +1256,28 @@ fieldset {
         font-family: Open Sans;
         font-style: normal;
         font-weight: 600;
-        font-size: 12px;
+        font-size: 0.75rem;
         line-height: 100%;
         color: #828282;
         display: block;
-        padding: 8px 10px;
+        padding: 0.5rem 0.625rem;
     }
 
     .custom-checkbox .custom-control-label:before {
         background: #FFFFFF;
-        border: 1px solid #D6D6D6;
+        border: 0.0625rem solid #D6D6D6;
         box-sizing: border-box;
-        border-radius: 5px;
+        border-radius: 0.3125rem;
     }
 
     .custom-control-label:after,
     .custom-control-label:before {
         position: absolute;
-        top: 2px;
-        left: -28px;
+        top: 0.125rem;
+        left: -1.75rem;
         display: block;
-        width: 25px;
-        height: 25px;
+        width: 1.5625rem;
+        height: 1.5625rem;
         content: "";
     }
 
@@ -1324,14 +1291,14 @@ fieldset {
     }
 
     .custom-checkbox .custom-control-input:checked~.custom-control-label:after {
-        border-left: solid 2.5px #58B58B;
-        border-bottom: solid 2.5px #58B58B;
-        width: 17px;
-        height: 8px;
+        border-left: solid 0.15625rem #58B58B;
+        border-bottom: solid 0.15625rem #58B58B;
+        width: 1.0625rem;
+        height: 0.5rem;
         transform: rotate(-45deg);
         box-sizing: border-box;
-        top: 9px;
-        left: -24px;
+        top: 0.5625rem;
+        left: -1.5rem;
     }
 
     .custom-checkbox .custom-control-input.error~.custom-control-label:before {
@@ -1350,10 +1317,10 @@ fieldset {
         font-family: Montserrat;
         font-style: normal;
         font-weight: 600;
-        font-size: 13px;
-        line-height: 25px;
+        font-size: 0.8125rem;
+        line-height: 1.5625rem;
         color: #828282;
-        margin-bottom: 10px;
+        margin-bottom: 0.625rem;
         display: block;
     }
 
@@ -1367,34 +1334,34 @@ fieldset {
             li {
                 display: block;
                 box-sizing: border-box;
-                border-radius: 3px;
-                margin-right: 20px;
-                margin-bottom: 17px;
+                border-radius: 0.1875rem;
+                margin-right: 1.25rem;
+                margin-bottom: 1.0625rem;
 
                 &.empty {
-                    width: 84px;
-                    height: 30px;
-                    border: 1px dashed #D6D6D6;
+                    width: 5.25rem;
+                    height: 1.875rem;
+                    border: 0.0625rem dashed #D6D6D6;
                     background: #FFFFFF;
                 }
 
                 &.selected {
                     background: #60C09E;
-                    border: 1px solid #60C09E;
+                    border: 0.0625rem solid #60C09E;
                     color: #F0F0F0;
                     font-family: Montserrat;
                     font-style: normal;
                     font-weight: 500;
-                    font-size: 13px;
+                    font-size: 0.8125rem;
                     line-height: 130%;
                     text-align: center;
-                    padding: 6px 10px 7px 18px;
+                    padding: 0.375rem 0.625rem 0.4375rem 1.125rem;
                 }
 
                 .close {
                     display: inline-block;
-                    margin-left: 25px;
-                    padding-left: 5px;
+                    margin-left: 1.5625rem;
+                    padding-left: 0.3125rem;
                     cursor: pointer;
                 }
             }
@@ -1403,7 +1370,7 @@ fieldset {
 
     .select_topic {
         p.title {
-            margin-top: 16px;
+            margin-top: 1rem;
         }
 
         .select_wrapp {
@@ -1412,11 +1379,11 @@ fieldset {
             &:after {
                 content: '';
                 position: absolute;
-                right: 20px;
-                bottom: 17px;
+                right: 1.25rem;
+                bottom: 1.0625rem;
                 display: block;
-                width: 6px;
-                height: 10px;
+                width: 0.375rem;
+                height: 0.625rem;
                 background-image: url("../img/arrow_right.svg");
                 background-size: contain;
                 background-position: center;
@@ -1427,11 +1394,11 @@ fieldset {
             &:before {
                 content: '';
                 position: absolute;
-                right: 2px;
-                bottom: 5px;
+                right: 0.125rem;
+                bottom: 0.3125rem;
                 display: block;
-                width: 12px;
-                height: 40px;
+                width: 0.75rem;
+                height: 2.5rem;
                 background-color: #fff;
                 z-index: 1;
             }
@@ -1441,24 +1408,24 @@ fieldset {
             font-family: Montserrat;
             font-style: normal;
             font-weight: 600;
-            font-size: 20px;
-            line-height: 24px;
+            font-size: 1.25rem;
+            line-height: 1.5rem;
             color: #4F4F4F;
             background: #FFFFFF;
-            border: 1px solid #D6D6D6;
+            border: 0.0625rem solid #D6D6D6;
             box-sizing: border-box;
-            border-radius: 3px;
-            padding: 10px 15px;
+            border-radius: 0.1875rem;
+            padding: 0.625rem 0.9375rem;
             display: block;
             width: 100%;
-            padding-right: 20px;
+            padding-right: 1.25rem;
         }
     }
 
     .select_tags {
         p.title {
-            margin-top: 18px;
-            margin-bottom: 15px;
+            margin-top: 1.125rem;
+            margin-bottom: 0.9375rem;
         }
 
         ul {
@@ -1466,24 +1433,24 @@ fieldset {
             display: -ms-flex;
             display: flex;
             flex-wrap: wrap;
-            margin-bottom: -17px;
+            margin-bottom: -1.0625rem;
 
             li {
                 display: block;
                 background: #FFFFFF;
-                border: 1px solid #D6D6D6;
+                border: 0.0625rem solid #D6D6D6;
                 box-sizing: border-box;
-                border-radius: 3px;
-                margin-right: 16px;
-                margin-bottom: 17px;
+                border-radius: 0.1875rem;
+                margin-right: 1rem;
+                margin-bottom: 1.0625rem;
                 font-family: Montserrat;
                 font-style: normal;
                 font-weight: 500;
-                font-size: 13px;
+                font-size: 0.8125rem;
                 line-height: 130%;
                 text-align: center;
                 color: #828282;
-                padding: 6px 18px 7px;
+                padding: 0.375rem 1.125rem 0.4375rem;
                 cursor: pointer;
 
                 &.selected,
@@ -1508,21 +1475,21 @@ fieldset {
             border-top: 0.0625rem solid #D6D6D6;
             display: block;
             height: 0.0625rem;
-            margin: 27px 0;
+            margin: 1.6875rem 0;
         }
 
         .save_btn {
             font-family: Montserrat;
             font-style: normal;
             font-weight: 600;
-            font-size: 15px;
-            line-height: 18px;
+            font-size: 0.9375rem;
+            line-height: 1.125rem;
             text-align: center;
             color: #FFFFFF;
             background: #557FAF;
-            box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.07);
-            border-radius: 3px;
-            padding: 10px 23px 11px;
+            box-shadow: 0.0625rem 0.0625rem 0.125rem rgba(0, 0, 0, 0.07);
+            border-radius: 0.1875rem;
+            padding: 0.625rem 1.4375rem 0.6875rem;
             text-decoration: none;
             display: inline-block;
 
@@ -1530,10 +1497,178 @@ fieldset {
                 cursor: not-allowed;
                 pointer-events: none;
                 background: #E0E0E0;
-                box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.07);
-                border-radius: 3px;
+                box-shadow: 0.0625rem 0.0625rem 0.125rem rgba(0, 0, 0, 0.07);
+                border-radius: 0.1875rem;
                 color: #fff;
             }
         }
+    }
+}
+// Responsive
+@media (max-width: 1199.98px) {
+    .steps_wrapp {
+        overflow-x: hidden;
+    }
+}
+@media (max-width: 991.98px) {
+    .registration_wrapp .ichac_img {
+        right: 0;
+    }
+}
+@media (max-width: 767.98px) {
+    .steps_wrapp .custom-control-label {
+        font-size: 1rem;
+    }
+
+    .card.about-person {
+        padding: 2rem 2.87500rem;
+    }
+}
+@media (max-width: 680px) {
+    .registration_wrapp {
+        padding-right: 10rem;
+    }
+
+    .registration_wrapp .ichac_img {
+        right: -5rem;
+    }
+
+    .steps_wrapp .sec_reg_footer p br {
+        display: none;
+    }
+
+    .steps_wrapp .sec_reg_footer > .container {
+        flex-direction: column-reverse;
+        padding-bottom: 0;
+    }
+
+    .sec_reg_footer .logo_wrapp {
+        width: 100%;
+        text-align: center;
+        padding: 1rem;
+        background-color: rgba(0, 0, 0, .05);
+        margin-top: 3rem;
+
+        img {
+            width: 10.6875rem;
+            height: auto;
+        }
+    }
+}
+@media (max-width: 575.98px) {
+    .steps > ul > li:not(:last-of-type) {
+        padding-right: 2rem;
+    }
+
+    .steps > ul > li:not(:last-of-type):after {
+        right: 0.7rem;
+    }
+
+    .registration_wrapp .registration_bts_wrapp .registration_bts {
+        flex-direction: column;
+    }
+
+    .registration_wrapp .registration_bts_wrapp a {
+        margin-bottom: 1rem;
+        max-width: 12rem;
+    }
+
+    .registration_wrapp {
+        padding-bottom: 2rem;
+        padding-right: 0;
+    }
+
+    .registration_wrapp h3 {
+        margin-top: 1rem;
+        margin-bottom: 4rem;
+    }
+
+    .steps_wrapp .custom-control-label {
+        padding-top: 0;
+    }
+
+    .registration_bts_wrapp {
+        padding-right: 10rem;
+    }
+
+    .steps_wrapp .sec_reg_footer .container {
+        padding-top: 1rem;
+    }
+
+    .sec_reg_footer .logo_wrapp {
+        margin-top: 1rem;
+    }
+    // step 2
+    .card.connect_bot {
+        padding: 0;
+        margin-bottom: 2.5rem;
+        background-color: transparent;
+        box-shadow: none;
+    }
+
+    .card.about-person {
+        padding: 0;
+        background-color: transparent;
+        box-shadow: none;
+        display: flex;
+        flex-direction: row;
+        margin-top: 2rem;
+        position: relative;
+
+        .image {
+            width: 6rem;
+            min-width: 6rem;
+            height: 6rem;
+            margin-right: 2rem;
+            position: absolute;
+        }
+
+        .bigger {
+            padding-left: 8rem;
+            height: 6rem;
+            display: flex;
+            align-items: center;
+        }
+    }
+
+    .card.choose_tags .selected_tags ul li.empty {
+        width: 6.25rem;
+        height: 2rem;
+    }
+
+    .card.choose_tags .select_tags ul li {
+        font-size: 1rem;
+    }
+
+    .card.choose_tags .select_tags .save_btn {
+        font-size: 1.1rem;
+    }
+
+    .card.choose_tags .selected_tags ul li.selected {
+        font-size: 1rem;
+    }
+    // step 3
+    .card.connect_bot .bot_block .btn {
+        margin-top: 1rem;
+        height: auto;
+        font-size: 0.9rem;
+    }
+
+    .card.connect_bot .bot_block .btn.btn-blue {
+        margin-right: 0;
+    }
+
+    .card.connect_bot .bot_block {
+        flex-wrap: wrap;
+    }
+    // step 4
+    .card.goallist .checklist input {
+        font-size: 1.1rem;
+        padding: 0.825rem 0.9375rem;
+    }
+
+    .card.goallist .btn_add_goal {
+        font-size: 0.9rem;
+        padding: 0.7375rem 0.9375rem;
     }
 }
