--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,9 +1,11 @@
 @import "reset";
 @import "fonts";
+@import "icons";
+@import "menu";
 @import "lightslider";
 @import "toha";
 @import "andre";
-
+@import "articles";
 
 .btn-blue {
     display: inline-block;
@@ -22,19 +24,420 @@
     font-weight: 600;
     font-size: 12px;
     border-radius: 3px;
-    -webkit-transition: all .4s;
-    transition: all .4s
+    -webkit-transition: all 0.4s;
+    transition: all 0.4s;
 }
 
-.btn,.btn:hover {
-    text-decoration: none
+.btn,
+.btn:hover {
+    text-decoration: none;
 }
 
 .btn-blue {
     background: #557faf;
-    color: #fff
+    color: #fff;
 }
 
 .btn-blue:hover {
-    background: #224a7c
+    background: #224a7c;
+}
+// .tab-nav
+
+.tab-nav ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+.tab-nav ul li.active {
+    border-bottom: 2px solid #cc8322;
+}
+@media (min-width: 600px) {
+    .tab-nav ul li {
+        display: inline-block;
+        margin-right: 45px;
+        border-bottom: 2px solid transparent;
+    }
+}
+
+.tab-nav ul li {
+    margin-bottom: 15px;
+    padding-bottom: 4px;
+}
+
+.tab-nav ul li.active a {
+    color: #4f4f4f;
+}
+
+.tab-nav ul li a {
+    text-decoration: none;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 130%;
+    color: #828282;
+}
+
+.tab-nav ul li a:active,
+.tab-nav ul li a:focus,
+.tab-nav ul li a:hover {
+    outline: none;
+    color: #000;
+}
+// .card.search_wrap
+
+.card.search_wrap,
+.card.select_wrap {
+    padding: 0;
+    font-family: icomoon!important;
+    speak: none;
+    font-style: normal;
+    font-weight: 400;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+    position: relative;
+    height: 40px;
+    border-radius: 8px;
+
+    &::before {
+        content: "\E923";
+        position: absolute;
+        top: 11px;
+        left: 17px;
+        display: block;
+        width: 18px;
+        height: 18px;
+        font-size: 18px;
+        color: #a3a3a3;
+    }
+
+    .form-control {
+        display: block;
+        width: 100%;
+        background-color: #fff;
+        background-clip: padding-box;
+        -webkit-transition: border-color 0.15s ease-in-out,-webkit-box-shadow 0.15s ease-in-out;
+        transition: border-color 0.15s ease-in-out,-webkit-box-shadow 0.15s ease-in-out;
+        transition: border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out;
+        transition: border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out,-webkit-box-shadow 0.15s ease-in-out;
+        border: 1px solid #cacaca;
+        -webkit-box-sizing: border-box;
+        box-sizing: border-box;
+        border-radius: 3px;
+        font-weight: 500;
+        font-size: 12px;
+        line-height: 15px;
+        text-align: center;
+        color: #000;
+        padding: 7.5px 16px;
+        text-align: left;
+        height: 100%;
+        width: 100%;
+        border: none;
+        padding-left: 50px;
+        border-radius: 8px;
+        font-family: Montserrat;
+        font-style: normal;
+
+        &:active,
+        &:focus {
+            outline: none;
+        }
+    }
+}
+
+.card.select_wrap {
+    overflow: initial;
+    font-family: icomoon;
+    speak: none;
+    font-style: normal;
+    font-weight: 400;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+
+    .form-control {
+        font-family: Montserrat;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 13px;
+        line-height: 153.59%;
+        color: #4F4F4F;
+        padding-left: 22px;
+    }
+
+    &:before {
+        display: none;
+    }
+
+    &:after {
+        content: "\E91D";
+        position: absolute;
+        top: 16px;
+        right: 6px;
+        display: block;
+        width: 16px;
+        height: 10px;
+        font-size: 10px;
+        color: #828282;
+        background: #fff;
+    }
+}
+// pagination
+
+.pagination {
+    margin: 0;
+    padding: 0;
+    display: -ms-flex;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+}
+
+.pagination .page-item:not(:last-of-type) {
+    margin-right: 15px;
+    margin-bottom: 15px;
+}
+
+.pagination .page-link {
+    background: #fff;
+    -webkit-box-shadow: 0 0 15px rgba(0,0,0,.1);
+    box-shadow: 0 0 15px rgba(0,0,0,.1);
+    border-radius: 8px;
+    width: 40px;
+    height: 40px;
+    display: -ms-flex;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 18px;
+    color: #828282;
+    text-decoration: none;
+}
+
+.pagination .page-item.active .page-link {
+    background: #60c09e;
+    color: #fff;
+}
+@media (max-width: 767.99px) {
+    .pagination .page-item:not(:last-of-type) {
+        margin-right: 13px;
+    }
+
+    .pagination .page-link {
+        width: 30px;
+    }
+}
+// castom custom_table
+
+.custom_table__wrapper {
+    padding: 5px 20px 10px;
+    margin-bottom: 23px;
+    border-radius: 8px;
+}
+
+.custom_table {
+    .thead {
+        .tr {
+            border-bottom: 1px solid #d6d6d6;
+
+            &:last-of-type {
+                border-bottom: 1px solid #d6d6d6;
+            }
+
+            & > div {
+                text-align: left;
+                font-family: Montserrat;
+                font-style: normal;
+                font-weight: 600;
+                font-size: 12px;
+                line-height: 153.59%;
+                color: #a7a7a7;
+                padding: 13px 6px;
+            }
+
+            .desc {
+                transform: rotate(180deg);
+                display: inline-block;
+                width: 8px;
+                height: 14px;
+                margin-left: 9px;
+            }
+        }
+    }
+
+    .tr {
+        border-bottom: 1px solid #d6d6d6;
+        display: -ms-flex;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        align-items: center;
+
+        &:hover {
+            & > div {
+                &.icon-delete,
+                &.icon-edit {
+                    opacity: 1;
+                    visibility: visible;
+                }
+            }
+        }
+
+        &:last-of-type {
+            border-bottom: none;
+        }
+
+        & > div {
+            width: 100%;
+            padding: 14px 6px;
+            font-family: Montserrat;
+            font-style: normal;
+            font-weight: 500;
+            font-size: 13px;
+            line-height: 16px;
+            color: #828282;
+
+            &:first-of-type {
+                min-width: 18px;
+                max-width: 18px;
+                padding-left: 0;
+                padding-right: 0;
+                margin-right: 12px;
+            }
+
+            &:nth-of-type(2) {
+                max-width: 193px;
+                min-width: 193px;
+
+                a {
+                    font-family: Montserrat;
+                    font-style: normal;
+                    font-weight: 500;
+                    font-size: 14px;
+                    line-height: 17px;
+                    color: #557FAF;
+                    text-decoration: none;
+                }
+            }
+
+            &:nth-of-type(3) {
+                min-width: 56px;
+                padding-left: 27px;
+            }
+
+            &:nth-of-type(4) {
+                min-width: 66px;
+                padding: 14px 27px;
+            }
+
+            &:nth-of-type(5) {
+                min-width: 55px;
+                word-wrap: break-word;
+            }
+
+            &:nth-of-type(6) {
+                min-width: 37px;
+                padding-left: 11px;
+                padding-right: 23px;
+            }
+
+            &:nth-of-type(7) {
+                min-width: 50px;
+            }
+
+            &:nth-of-type(8) {
+                padding-left: 23px;
+                padding-right: 20px;
+                min-width: 95px;
+            }
+
+            &.posted {
+                font-weight: 600;
+                font-size: 12px;
+                line-height: 153.59%;
+                color: #58B58B;
+            }
+
+            &.moderation {
+                font-weight: 600;
+                font-size: 12px;
+                line-height: 153.59%;
+                color: #557FAF;
+            }
+
+            &.draft {
+                font-weight: 600;
+                font-size: 12px;
+                line-height: 153.59%;
+                color: #CC8322;
+            }
+
+            &.icon-delete,
+            &.icon-edit {
+                font-size: 18px;
+                opacity: 0;
+                visibility: hidden;
+                cursor: pointer;
+            }
+
+            &.icon-delete {
+                padding-left: 0;
+                padding-right: 12px;
+            }
+        }
+    }
+
+    .custom_checkbox {
+        input {
+            position: absolute;
+            z-index: -111;
+            opacity: 0;
+
+            &:checked + label::after {
+                display: block;
+            }
+        }
+
+        label {
+            display: block;
+            border: 1px solid #D6D6D6;
+            box-sizing: border-box;
+            background-color: #fff;
+            width: 18px;
+            height: 18px;
+            position: relative;
+
+            &::after {
+                content: '';
+                position: absolute;
+                top: 40%;
+                left: 50%;
+                transform: translate(-50%, -50%) rotate(-45deg);
+                width: 12px;
+                height: 5.5px;
+                box-sizing: border-box;
+                border-bottom: solid 1.8px #828282;
+                border-left: solid 1.8px #828282;
+                background-color: #fff;
+                display: none;
+            }
+        }
+    }
 }
