--- a/sass/newland/_sec_5.scss
+++ b/sass/newland/_sec_5.scss
@@ -91,3 +91,38 @@
         top: 101%;
     }
 }
+@media (max-width: 767.98px) {
+    .sec_5 {
+        padding: 30px 0;
+        overflow: hidden;
+
+        .sec_title {
+            margin-bottom: 30px;
+        }
+
+        p {
+            font-size: 14px;
+            margin: 0;
+        }
+
+        .embed-responsive {
+            margin-bottom: 30px;
+        }
+
+        .media {
+            margin-left: 10px;
+        }
+
+        .icon {
+            width: 80px;
+            min-width: 80px;
+            height: 80px;
+        }
+        // abs pic
+        .star_blue {
+            left: 82%;
+            top: 90%;
+            width: 106px;
+        }
+    }
+}
