--- a/sass/newland/_sec_profile.scss
+++ b/sass/newland/_sec_profile.scss
@@ -35,10 +35,10 @@
 
         img {
             position: absolute;
-            bottom: -730px;
-            right: 0;
-            width: 350px;
-            filter: drop-shadow(20px 20px 25px rgba(0,0,0,0.1));
+            bottom: 0;
+            right: -70px;
+            width: 570px;
+            opacity: 1;
         }
     }
 
@@ -148,7 +148,7 @@
                 left: 50%;
                 transform: translateX(-50%);
                 max-width: 345px;
-                bottom: -850px;
+                bottom: 0;
             }
         }
         // abs icons
