--- a/sass/newland/_sec_your_mentor.scss
+++ b/sass/newland/_sec_your_mentor.scss
@@ -35,10 +35,9 @@
 
         img {
             position: absolute;
-            top: -30px;
-            left: 0;
-            filter: drop-shadow(20px 20px 25px rgba(0,0,0,0.3));
-            width: 400px;
+            bottom: -80px;
+            left: -90px;
+            width: 600px;
         }
     }
 
@@ -75,10 +74,13 @@
         }
 
         .img_wrapp {
-            height: 360px;
+            height: 240px;
 
             img {
-                max-width: 400px;
+                bottom: -80px;
+                left: 50%;
+                transform: translateX(-54%);
+                width: 400px;
             }
         }
 
