--- a/sass/newland/_sec_about_course.scss
+++ b/sass/newland/_sec_about_course.scss
@@ -65,6 +65,18 @@
                 margin-bottom: 30px;
             }
         }
+
+        ul {
+            padding-left: 15px;
+        }
+
+        li {
+            font-weight: 500;
+            font-size: 14px;
+            line-height: 160%;
+            color: #828282;
+            margin-top: 10px;
+        }
     }
     // abs_pic
     .circle {
