--- a/sass/newland/_sec_product.scss
+++ b/sass/newland/_sec_product.scss
@@ -51,7 +51,7 @@
 
     .card {
         padding: 18px 30px 26px 25px;
-        max-width: 549px;
+        max-width: 580px;
         margin-bottom: 78px;
 
         p {
@@ -62,6 +62,19 @@
             color: #828282;
             padding: 0;
             margin: 0;
+        }
+
+        ul {
+            padding-left: 15px;
+        }
+
+        li {
+            font-style: normal;
+            font-weight: 500;
+            font-size: 13px;
+            line-height: 153.59%;
+            color: #828282;
+            margin-top: 10px;
         }
 
         &__footer {
