--- a/sass/newland/_sec_profile.scss
+++ b/sass/newland/_sec_profile.scss
@@ -22,6 +22,23 @@
         color: #828282;
         margin-bottom: 38px;
 
+        span {
+            display: block;
+
+            @media (max-width: 767.98px) {
+                position: relative;
+                padding-left: 15px;
+                font-size: 13px;
+                &:before {
+                    position: absolute;
+                    left: 0;
+                    top: 50%;
+                    transform: translateY(-50%);
+                    content: '- ';
+                }
+            }
+        }
+
         i {
             display: block;
             margin-top: 44px;
