--- a/sass/newland/_sec_profile.scss
+++ b/sass/newland/_sec_profile.scss
@@ -40,9 +40,9 @@
 
         img {
             position: absolute;
-            bottom: 0;
-            right: -40px;
-            width: 420px;
+            bottom: -120px;
+            right: 0;
+            width: 400px;
             filter: drop-shadow(20px 20px 25px rgba(0,0,0,0.3));
         }
     }
