--- a/sass/newland/_sec_my_projects.scss
+++ b/sass/newland/_sec_my_projects.scss
@@ -187,7 +187,7 @@
 
         .b-card-footer {
             display: flex;
-            align-items: center;
+            align-items: flex-end;
             font-size: 13px;
 
             .counter {
