--- a/sass/newland/_sec_your_mentor.scss
+++ b/sass/newland/_sec_your_mentor.scss
@@ -33,9 +33,11 @@
         height: 570px;
 
         img {
+
             position: absolute;
             bottom: 0;
             left: 0;
+            width: 520px;
             filter: drop-shadow(20px 20px 25px rgba(0, 0, 0, 0.3));
         }
     }
