--- a/sass/newland/_sec_my_projects.scss
+++ b/sass/newland/_sec_my_projects.scss
@@ -62,6 +62,7 @@
             img {
                 max-width: 220px;
             }
+
         }
 
         .media-image {
@@ -305,6 +306,7 @@
         width: 220px;
         bottom: 0;
         left: 25px;
+
     }
 
     .pl-22 {
@@ -335,6 +337,7 @@
     .sec_my_projects .card .media .media-image-abs_wrapp {
         width: calc(100% + 40px);
         border-bottom: 1px solid #e9ecef;
+        flex-basis: 80px;
     }
 
     .sec_my_projects .card-with-table .text .text-title {
