--- a/sass/newland/_sec_your_mentor.scss
+++ b/sass/newland/_sec_your_mentor.scss
@@ -34,7 +34,8 @@
 
         img {
             position: absolute;
-            bottom: -60px;
+            width: 500px;
+            bottom: 0;
             left: 0;
             filter: drop-shadow(20px 20px 25px rgba(0, 0, 0, 0.3));
         }
@@ -77,6 +78,7 @@
 
             img {
                 max-width: 400px;
+                display: none;
             }
         }
 
