--- a/sass/newland/_sec_my_projects.scss
+++ b/sass/newland/_sec_my_projects.scss
@@ -302,8 +302,8 @@
 }
 @media (min-width: 767px) {
     .sec_my_projects .card .media .media-image-abs {
-        position: absolute;
-        width: 220px;
+        // position: absolute;
+        width: 200px;
         bottom: 0;
         left: 25px;
 
