--- a/sass/newland/_sec_offer.scss
+++ b/sass/newland/_sec_offer.scss
@@ -42,6 +42,19 @@
 		top: 50%;
 	}
 }
+	.img_wrapp {
+		position: relative;
+		width: 100%;
+		height: 100%;
+
+		img {
+				position: relative;
+				bottom: 0;
+				right: 0px;
+				width: 500px;
+				filter: drop-shadow(20px 20px 25px rgba(0,0,0,0.3));
+					}
+			}
 @media (min-width: 1200px) {
 	.sec_offer {
 		.container {
@@ -58,6 +71,7 @@
 	}
 }
 @media (max-width: 1200px) {
+
 	.sec_offer {
 		.main-txt {
 			font-size: 26px;
@@ -72,6 +86,15 @@
 	}
 }
 @media (max-width: 767.98px) {
+	.sec_offer{
+	.img_wrapp {
+	 position: relative;
+	 width: 100%;
+	 height: 100%;
+	 img {
+			 display: none;
+				 }
+		 }}
 	.sec_offer {
 		padding: 30px 0;
 
